--- a/rnr_cinematic/src/main/res/layout/activity_splash.xml
+++ b/rnr_cinematic/src/main/res/layout/activity_splash.xml
@@ -9,8 +9,7 @@
         android:id="@+id/staticBg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/room_bg_town1" />
+        android:scaleType="centerCrop"/>
 
     <!-- PULSING COLOR, CLIPPED TO LOGO SHAPE (full-bleed) -->
     <com.newdimension.rnr_cinematic.ui.LogoMaskView
